--- a/assets/style.css
+++ b/assets/style.css
@@ -45,3 +45,27 @@ html,body{
 canvas,iframe,img{
 	max-width:30%;
 }
+
+#main{
+	display:none;
+}
+
+h1,h2,h3,h4,h5{
+	padding:0;
+	margin:0;
+	margin-top:0.5em;
+}
+h1{
+	font-size:1.2em;
+	font-style: bold;
+}
+h2,h3,h4,h5{
+	font-size:1em;
+	font-style: bold;
+}
+ol,ul{
+	margin-top:0;
+	margin-bottom:0;
+	padding-top:0;
+	padding-bottom:0;
+}
