--- a/assets/style.css
+++ b/assets/style.css
@@ -38,8 +38,14 @@ html,body{
 	left:0;
 	right:0;
 	bottom:0;
+}
 
+*{
 	font-family: BerkeliumIIHGR, Arial, sans-serif;
+
+	/* non-standard */
+	font-smooth: never;
+	-webkit-font-smoothing : none;
 }
 
 #main{
