--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,11 @@ html,body{
 	bottom:0;
 }
 
+body{
+	max-width:60em;
+	margin:auto;
+}
+
 *{
 	font-family: BerkeliumIIHGR, Arial, sans-serif;
 
@@ -85,7 +90,7 @@ ol,ul,p{
 
 table {
 	width:100%;
-	padding:0.8em;
+	padding:1.2em;
 }
 
 section {
