--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,7 @@ html,body{
 	
 	width:100%;
 	height:100%;
+	font-size:85%;
 
 	top:0;
 	left:0;
@@ -41,13 +42,11 @@ html,body{
 }
 
 body{
-	max-width:60em;
 	margin:auto;
 }
 
 *{
 	font-family: BerkeliumIIHGR, Arial, sans-serif;
-
 	/* non-standard */
 	font-smooth: never;
 	-webkit-font-smoothing : none;
@@ -69,16 +68,11 @@ button{
 h1,h2,h3,h4,h5{
 	padding:0;
 	margin:0;
-	margin-top:1.2em;
-	margin-bottom:0.8em;
-	text-align:center;
+	margin-top:0.5em;
+	margin-bottom:0.1em;
 }
-h1{
-	font-size:1.4em;
-	font-style: bold;
-}
-h2,h3,h4,h5{
-	font-size:1.2em;
+h1,h2,h3,h4,h5{
+	font-size:1rem;
 	font-style: bold;
 }
 ol,ul,p{
@@ -86,6 +80,10 @@ ol,ul,p{
 	margin-bottom:0;
 	padding-top:0;
 	padding-bottom:0;
+	margin:0;
+	padding:0;
+	padding-left:1.5rem;
+	-webkit-margin-before: 0;
 }
 
 table {
@@ -94,12 +92,8 @@ table {
 }
 
 section {
-	padding-bottom:1.2em;
 }
 
 #description, #ui, #details{
 	text-align: center;
-}
-#description h1{
-	font-size:2em;
 }
